# joplin-md-sync

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  agent-manifest.json  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHATGPT_ACTIONS.md  CHATGPT_INSTRUCTIONS.md  CLI.md  CONFLICTS.md  MCP.md  MCP_API.md  RELEASE_PROCESS.md  SECURITY.md  SERVICE.md  STATE_MODEL.md  WORKSPACE_FORMAT.md  joplin-terminal-service.md
examples/: agent-session.md  config.example.json
examples/agent-notes-repository/: .gitignore  AGENTS.md  README.md  RUNBOOK.md
examples/agent-notes-repository/scripts/: install-joplin-md-sync.py
examples/systemd/: joplin-md-sync-mcp.service
examples/windows/: install-mcp-task.ps1  install-service-task.ps1
schemas/: agent-manifest-v1.schema.json  agent-output-v1.schema.json  note-metadata-v1.schema.json
scripts/: bootstrap.py  build_standalone.py  build_zipapp.py  check_version_increment.py  prepare_chatgpt_action.py  standalone_entry.py  verify_release.py
scripts/joplin_terminal_service/: collect_joplin_debug.sh  install_joplin_terminal.py  joplin_terminal_common.py  pyproject.toml  run_joplin_terminal.py
scripts/joplin_terminal_service/systemd/: joplin-md-sync-mcp.service  joplin-md-sync.service  joplin-terminal.service
scripts/joplin_terminal_service/tests/: __init__.py  fake_joplin.py  test_install_joplin_terminal.py  test_run_joplin_terminal.py
src/joplin_md_sync/: __init__.py  __main__.py  api.py  auth.py  canonical.py  cli.py  config.py  conflicts.py  diff.py  errors.py  gpt_actions.py  gpt_openapi.py  journal.py  json_safety.py  locking.py  mcp_server.py  mcp_service.py  metadata.py  models.py  paths.py  planner.py  resources.py  state.py  sync.py  tool_executor.py  tool_registry.py  tool_schema.py  update_check.py  workspace.py
tests/: helpers.py
tests/fake_joplin_server/: __init__.py  server.py
tests/integration/: test_cli_contract.py  test_conflicts.py  test_discovery_resources.py  test_gpt_actions.py  test_init_pull.py  test_mcp_server.py  test_push_pull.py  test_races_recovery.py
tests/unit/: test_agent_notes_repository.py  test_auth.py  test_canonical.py  test_chatgpt_actions_docs.py  test_config.py  test_gpt_actions.py  test_gpt_deployment.py  test_gpt_openapi.py  test_json_safety.py  test_locking.py  test_mcp_service.py  test_metadata.py  test_paths.py  test_planner.py  test_prepare_chatgpt_action.py  test_service_installer_docs.py  test_standalone.py  test_state.py  test_tool_registry.py  test_update_check.py  test_version.py  test_version_increment.py
tests_live/: __init__.py  test_gpt_actions_live.py  test_mcp_live.py
