[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "joplin-md-sync"
# The version lives in the root .version file (single source, see docs/RELEASE_PROCESS.md).
dynamic = ["version"]
description = "Safe two-way synchronization between Joplin notes and a local Markdown workspace, built for autonomous coding agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [{ name = "joplin-md-sync contributors" }]
keywords = ["joplin", "markdown", "sync", "notes", "cli", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
# Zero third-party runtime dependencies by design (see docs/ARCHITECTURE.md).
# If one ever becomes necessary, declare it here; requirements-dev.txt stays
# a pip-freeze lock of the development environment only.
dependencies = []

[dependency-groups]
# Declared (unpinned) development tools; the committed pip-freeze lock lives
# in requirements-dev.txt and is regenerated with `make freeze`.
dev = ["ruff", "mypy", "build", "pytest", "pytest-xdist"]

[project.urls]
Repository = "https://github.com/kogeler/joplin-md-sync"
Changelog = "https://github.com/kogeler/joplin-md-sync/blob/main/CHANGELOG.md"

[project.scripts]
joplin-md-sync = "joplin_md_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ".version" }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
# json.loads returns Any by design; forcing casts everywhere adds noise, not safety.
warn_return_any = false
files = ["src"]
